2006-09-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R (symmetricMatrix): add validity method (available
	in C for a long time). Many "n..Matrix": drop (wrong) validity arg.

	* src/lgCMatrix.c (lgCMatrix_validate): check 'x' slot (!)

	* tests/indexing.Rout.save:
	* tests/indexing.R: additions, mainly for 'lsparse'

	* R/diagMatrix.R (Diagonal) & coercion to lgTMatrix: fixes for NA
	case.

	* R/Auxiliaries.R (nz.NA): new utility now used in nnzero()

2006-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (prSpMatrix): print logical NAs "visibly"
		as 'N' (1-letter - Ok?)

	* tests/group-methods.R: add test for logical + NAs

	* R/dMatrix.R ("Compare"): fix to work with NA's

	* R/AllClass.R: "Cholesky" etc now inherit from MatrixFactorization.

	* src/lgCMatrix.c (ncsc_to_matrix): renamed from lcsc_to_matrix()
		which is implemented.

2006-09-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c: coerce logical <-> double instead of
	typecasting;  needed for "l" matrix handling in cholmod.

	* tests/other-pkgs.R (graph): small extension in "graph" checks.

	* R/sparseMatrix.R (graphNEL -> Tsparse): method for weight case.
	(Tsp2grNEL): other fixes needed

2006-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R ("nMatrix"): and subclasses for "nonzero pattern"
		Matrices, since "lMatrix", also "lsparseM" can have NA
	* R/ndenseMatrix.R, etc: new source files
	* man/nsparseMatrix-classes.Rd, etc: new help files
	* tests/: adaptions
	* src/chm_common.c (chm_dense_to_SEXP): and others:
		new 'Rkind' argument: "l*" and "d*" both use CHOLMOD_REAL
	* src/Csparse.c, etc: dito

2006-09-11  Douglas Bates  <bates@R-project.org>

	* src/Mutils.[ch],init.c inst/include/*.h: Move the
	alloc_d**Matrix functions to the lme4 package.

2006-09-09  Douglas Bates  <bates@R-project.org>

	* src/dsCMatrix.c (dsCMatrix_Cholesky): igoring LDL = FALSE now
	fixed
