@@ -159,6 +159,10 @@ setReplaceMethod("[", signature(x = "CsparseMatrix", i = "index", j = "index",
 
 setMethod("crossprod", signature(x = "CsparseMatrix", y = "missing"),
 	  function(x, y = NULL) {
+              if (is(x, "symmetricMatrix")) {
+                  warning("crossprod(x) calculated as x %*% x for sparse, symmetric x")
+                  return(x %*% x)
+              }
 	      .Call(Csparse_crossprod, x, trans = FALSE, triplet = FALSE)
 	  })
 
@@ -175,6 +179,10 @@ setMethod("crossprod", signature(x = "CsparseMatrix", y = "numeric"),
 
 setMethod("tcrossprod", signature(x = "CsparseMatrix", y = "missing"),
 	  function(x, y = NULL) {
+              if (is(x, "symmetricMatrix")) {
+                  warning("tcrossprod(x) calculated as x %*% x for sparse, symmetric x")
+                  return(x %*% x)
+              }
               .Call(Csparse_crossprod, x, trans = TRUE, triplet = FALSE)
 	  })
 
